Bug 359727 - Fails to upload multiple images to imgur
Summary: Fails to upload multiple images to imgur
Status: RESOLVED FIXED
Alias: None
Product: frameworks-purpose
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-02-23 21:41 UTC by Alex Fiestas
Modified: 2016-02-26 02:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Fiestas 2016-02-23 21:41:24 UTC
I was trying to paste multiple selected images in dolphin and it only uploaded one.

Reproducible: Always

Steps to Reproduce:
1.Select few images in dolphin
2.copy
3.paste into the plasmoid

Also with DnD does not work.
Comment 1 Aleix Pol 2016-02-26 02:59:44 UTC
Git commit e051190374aa516b9a8e3e90798c12d95085e99f by Aleix Pol.
Committed on 26/02/2016 at 02:59.
Pushed by apol into branch 'master'.

Support uploading several images to imgur

They will be put together in an album and presented as such.

M  +74   -43   src/plugins/imgur/imgurplugin.cpp

http://commits.kde.org/purpose/e051190374aa516b9a8e3e90798c12d95085e99f