Support uploading several images to imgur

They will be put together in an album and presented as such.

BUG: 359727